@@ -4,11 +4,23 @@ module ActiveModel
   module Validations
     class FormatValidator < EachValidator
       def validate_each(record, attribute, value)
-        if options[:with] && value.to_s !~ options[:with]
-          record.errors.add(attribute, :invalid, options.except(:with).merge!(:value => value))
-        elsif options[:without] && value.to_s =~ options[:without]
-          record.errors.add(attribute, :invalid, options.except(:without).merge!(:value => value))
+        if options[:with]
+          regexp = options[:with].respond_to?(:call) ? options[:with].call(record) : options[:with]
+          if regexp.is_a?(Regexp)
+            record.errors.add(attribute, :invalid, options.except(:with).merge!(:value => value)) if value.to_s !~ regexp
+          else
+            raise ArgumentError, "A proc or lambda given to :with option must returns a regular expression"
+          end
+        elsif options[:without]
+          regexp = options[:without].respond_to?(:call) ? options[:without].call(record) : options[:without]
+          if regexp.is_a?(Regexp)
+            record.errors.add(attribute, :invalid, options.except(:without).merge!(:value => value)) if value.to_s =~ regexp
+          else
+            raise ArgumentError, "A proc or lambda given to :without option must returns a regular expression"
+          end
         end
+      rescue TypeError
+        raise ArgumentError, "A proc or lambda given to :with or :without option must returns a regular expression"
       end
 
       def check_validity!
@@ -16,12 +28,12 @@ module ActiveModel
           raise ArgumentError, "Either :with or :without must be supplied (but not both)"
         end
 
-        if options[:with] && !options[:with].is_a?(Regexp)
-          raise ArgumentError, "A regular expression must be supplied as the :with option of the configuration hash"
+        if options[:with] && !options[:with].is_a?(Regexp) && !options[:with].respond_to?(:call)
+          raise ArgumentError, "A regular expression or a proc or lambda must be supplied as the :with option of the configuration hash"
         end
 
-        if options[:without] && !options[:without].is_a?(Regexp)
-          raise ArgumentError, "A regular expression must be supplied as the :without option of the configuration hash"
+        if options[:without] && !options[:without].is_a?(Regexp) && !options[:without].respond_to?(:call)
+          raise ArgumentError, "A regular expression or a proc or lambda must be supplied as the :without option of the configuration hash"
         end
       end
     end
@@ -40,17 +52,26 @@ module ActiveModel
       #     validates_format_of :email, :without => /NOSPAM/
       #   end
       #
+      # You can also provide a proc or lambda which will determine the regular expression that will be used to validate the attribute
+      #
+      #   class Person < ActiveRecord::Base
+      #     # Admin can have number as a first letter in their screen name
+      #     validates_format_of :screen_name, :with => lambda{ |person| person.admin? ? /\A[a-z0-9][a-z0-9_\-]*\Z/i : /\A[a-z][a-z0-9_\-]*\Z/i }
+      #   end
+      #
       # Note: use <tt>\A</tt> and <tt>\Z</tt> to match the start and end of the string, <tt>^</tt> and <tt>$</tt> match the start/end of a line.
       #
-      # You must pass either <tt>:with</tt> or <tt>:without</tt> as an option. In addition, both must be a regular expression,
-      # or else an exception will be raised.
+      # You must pass either <tt>:with</tt> or <tt>:without</tt> as an option. In addition, both must be a regular expression
+      # or a proc or lambda, or else an exception will be raised.
       #
       # Configuration options:
       # * <tt>:message</tt> - A custom error message (default is: "is invalid").
       # * <tt>:allow_nil</tt> - If set to true, skips this validation if the attribute is +nil+ (default is +false+).
       # * <tt>:allow_blank</tt> - If set to true, skips this validation if the attribute is blank (default is +false+).
       # * <tt>:with</tt> - Regular expression that if the attribute matches will result in a successful validation.
+      #   This can be provided as a proc or lambda returning regular expression which will be called at runtime.
       # * <tt>:without</tt> - Regular expression that if the attribute does not match will result in a successful validation.
+      #   This can be provided as a proc or lambda returning regular expression which will be called at runtime.
       # * <tt>:on</tt> - Specifies when this validation is active. Runs in all
       #   validation contexts by default (+nil+), other options are <tt>:create</tt>
       #   and <tt>:update</tt>.
