@@ -42,4 +42,25 @@ class ExclusionValidationTest < ActiveModel::TestCase
   ensure
     Person.reset_callbacks(:validate)
   end
+
+  def test_validates_exclusion_of_with_lambda
+    Topic.validates_exclusion_of :title, :in => lambda{ |topic| topic.author_name == "sikachu" ? %w( monkey elephant ) : %w( abe wasabi ) }
+
+    p = Topic.new
+    p.title = "elephant"
+    p.author_name = "sikachu"
+    assert p.invalid?
+
+    p.title = "wasabi"
+    assert p.valid?
+  end
+
+  def test_validates_exclustion_with_invalid_lambda_return
+    Topic.validates_exclusion_of :title, :in => lambda{ |topic| false }
+
+    p = Topic.new
+    p.title = "wasabi"
+    p.author_name = "sikachu"
+    assert_raise(ArgumentError){ p.valid? }
+  end
 end
